CSS-Verbesserung Kartenseite

--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -6,6 +6,12 @@
   
 .nav.nav-pills
   margin-top: 8px
+  
+  li
+    max-width: 50%
+    
+    a
+      padding: 10px
 
 .ol-map-mobile
   bottom: 0
