CSS-Korrektur Zoom-Buttons mobil

--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -60,6 +60,7 @@
   border-radius: 4px
   width: 30px
   height: 30px
+  line-height: 30px
 
 .ol-control, .ol-control:hover, .ol-control:focus
   background: none
