--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
               </div>
               <div class="row">
                 <%= yield :nav %>
-                <div class="col-md-4" id="textsizer">
+                <div id="textsizer">
                   <div class="btn-group textresizer">
                     <%= link_to '#', class: 'btn btn-sm btn-default', remote: true do %>
                       A-
