--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -50,6 +50,9 @@ body
   border-color: #bce8f1
   padding-bottom: 2px
   color: #337ab7
+  
+.textresizer
+  margin-top: -10px
 
 select
   cursor: pointer
