--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -5,10 +5,11 @@
   padding: 0
   
 .nav.nav-pills
-  margin-top: 8px
+  margin-top: -18px
+  margin-right: 18px
+  float: left
   
   li
-    max-width: 50%
     
     a
       padding: 10px
@@ -121,6 +122,3 @@
     
 .ol-attribution:not(.ol-collapsed)
   background: rgba(255,255,255,0.8)
-
-#textsizer
-  margin-top: 10px
