--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,48 +16,36 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <div class="row">
-                <div class="col-md-12">
-                  <%= image_tag image_path('klarschiff.png'), id: 'logo1' %>
-                </div>
-              </div>
-              <div class="row">
-                <%= yield :nav %>
-                <div id="textsizer">
-                  <div class="btn-group textresizer">
-                    <%= link_to '#', class: 'btn btn-sm btn-default', remote: true do %>
-                      A-
-                    <% end -%>
-                    <%= link_to '#', class: 'btn btn-sm btn-default textresizer-active', remote: true do %>
-                      A
-                    <% end -%>
-                    <%= link_to '#', class: 'btn btn-sm btn-default', remote: true do %>
-                      A+
-                    <% end -%>
-                  </div>
-                </div>
-              </div>
+              <%= image_tag image_path('klarschiff.png'), id: 'logo1' %>
+            </div>
+            <div class="col-md-4 text-center">
+              <%= link_to [:root], data: { turbolinks: false } do %>
+                <h1><%= Settings::Client.name %></h1>
+              <% end -%>
             </div>
             <div class="col-md-4">
-              <div class="text-center">
-                <%= link_to [:root], data: { turbolinks: false } do %>
-                  <h1><%= Settings::Client.name %></h1>
+              <%= image_tag Settings::Client.logo_url, id: 'logo2' %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <%= yield :nav %>
+              <div class="btn-group btn-group-sm textresizer" id="textsizer">
+                <%= link_to '#', class: 'btn btn-sm btn-info', remote: true do %>
+                  A-
+                <% end -%>
+                <%= link_to '#', class: 'btn btn-sm btn-info textresizer-active', remote: true do %>
+                  A
+                <% end -%>
+                <%= link_to '#', class: 'btn btn-sm btn-info', remote: true do %>
+                  A+
                 <% end -%>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="row">
-                <div class="col-md-12">
-                  <%= image_tag Settings::Client.logo_url, id: 'logo2' %>
-                </div>
-                <div class="col-md-12">
-                  <div class="text-right">
-                    <%= link_to t(:privacy), [:privacy, :static] %> |
-                    <%= link_to t(:imprint), [:imprint, :static] %> |
-                    <%= link_to t(:usage), [:usage, :static] %>
-                  </div>
-                </div>
-              </div>
+            <div class="col-md-6 text-right">
+              <%= link_to t(:privacy), [:privacy, :static] %> |
+              <%= link_to t(:imprint), [:imprint, :static] %> |
+              <%= link_to t(:usage), [:usage, :static] %>
             </div>
           </div>
         </div>
