--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -22,7 +22,7 @@
                   <% if (url = req.media_url).present? -%>
                     <div class="img-box">
                       <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" />
-                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service %></span>
+                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
                       <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
                     </div>
                   <% end -%>
@@ -35,7 +35,7 @@
                   <% if (url = req.media_url).present? -%>
                     <div class="img-box">
                       <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" />
-                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service %></span>
+                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
                       <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
                     </div>
                   <% end -%>
