Toleranz für Touch-Erkennung in OpenLayers auf 10px gesetzt, damit auch kräftigere Finger Icons auf der Karte anwählen können

--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -46,6 +46,7 @@ class KS.Map
   constructor: (@projection = KS.projection()) ->
     @olMap = new ol.Map
       target: 'ol-map'
+      moveTolerance: 10
       controls: ol.control.defaults().extend([new KS.GeolocationControl])
       view: new ol.View
         projection: @projection
