Hlfe, Tipps für Votes erfordert hilfe.html in klarschiff_ressources

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
               </div>
             </div>
             <div class="col-md-6 text-right">
+              <%= link_to t(:help), [:help, :static] %> |
               <%= link_to t(:privacy), [:privacy, :static] %> |
               <%= link_to t(:imprint), [:imprint, :static] %> |
               <%= link_to t(:usage), [:usage, :static] %>
