Hinweis zu Unterstützungen auch in mobiler Ansicht

--- a/app/views/requests/desktop/_request_header.html.erb
+++ b/app/views/requests/desktop/_request_header.html.erb
@@ -21,7 +21,7 @@
       <b>
         <%= link_to [:map, request: @request.id], title: t('buttons.perma_link', req_id: @request.id),
           data: { turbolinks: false } do %>
-          <span class="glyphicon glyphicon-link">
+          <span class="glyphicon glyphicon-link"></span>
         <% end -%>
       </b>
     </div>
