Fotos auf Startseite immer gleich groß darstellen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -82,10 +82,9 @@ select
 
 .img-box
   width: 100%
-
-  img
-    position: relative
-    top: 0
+  height: 180px
+  background-repeat: no-repeat
+  background-position: center center
 
   .img-overlay-top
     position: absolute
