kleine Layoutverbesserungen Startseite

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -331,11 +331,15 @@ header
   width: 100%
  
   .label
-    font-size: 14px
+    font-size: 16px
  
 .statistic-box-text
   width: 100%
   margin-top: 15px
+  font-weight: bold
 
 a.static-link
-  font-weight: bold    
+  font-weight: bold
+  
+most-important
+  font-size: 17px
