--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,13 @@
             <div class="col-md-6">
               <%= yield :nav %>
               <div class="btn-group btn-group-sm textresizer" id="textsizer">
-                <%= link_to '#', class: 'btn btn-sm btn-info', remote: true do %>
+                <%= link_to '#', class: 'btn btn-sm btn-link', remote: true do %>
                   A-
                 <% end -%>
-                <%= link_to '#', class: 'btn btn-sm btn-info textresizer-active', remote: true do %>
+                <%= link_to '#', class: 'btn btn-sm btn-link textresizer-active', remote: true do %>
                   A
                 <% end -%>
-                <%= link_to '#', class: 'btn btn-sm btn-info', remote: true do %>
+                <%= link_to '#', class: 'btn btn-sm btn-link', remote: true do %>
                   A+
                 <% end -%>
               </div>
