Icons in mobilem Hauptmenü kleiner gemacht und enger zusammengerückt, um Umbruch möglichst lange hinauszuzögern

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -49,6 +49,9 @@ h5,
 
 .navbar-default .navbar-nav > li > a
   color: #000
+  font-size: 14px
+  padding-left: 3px
+  padding-right: 4px
 
 nav
   &.navbar-fixed-bottom
