--- a/app/views/requests/_show_panel_title_buttons.html.erb
+++ b/app/views/requests/_show_panel_title_buttons.html.erb
@@ -1,4 +1,9 @@
 <div class="right-badges pull-right">
+<% if !login_required? || (login_required? && !has_field_service_team?) -%>
+  <span class="badge pull-right clickable" data-target="<%= map_path(mobile: @mobile) %>">
+    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+  </span>
+<% end -%>
 <span class="badge pull-right clickable" data-target="<%= request_path(request, mobile: @mobile, id_list: id_list) %>">
   <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 </span>
@@ -7,7 +12,6 @@
     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   </span>
 <% end -%>
-
 <% if request.job_status && display?(:edit_status) -%>
   <div class="btn-group pull-right">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
