--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -60,7 +60,7 @@
     <% if @requests.present? -%>
     <div class="list-group">
       <% @requests.each do |req| -%>
-        <%= link_to(url_for([:map, request: req.id]), class: 'list-group-item') do %>
+        <%= link_to(url_for([:map, request: req.id]), class: 'list-group-item', data: { turbolinks: false }) do %>
           <h4 class="list-group-item-heading right-badges">
             <%= image_tag(image_path(req.icon_list), alt: "#{ req.service.type }, #{ req.extended_attributes.detailed_status }") %>
             #<%= req.id %> <%= req.service.group %> – <%= req.service_name %> – <%= l(req.requested_datetime.to_date) %>
