Link auf statische Seite zum Datenschutz in mobilem Frontend ergänzt

--- a/app/views/maps/_mobile.html.erb
+++ b/app/views/maps/_mobile.html.erb
@@ -74,6 +74,12 @@
               <span class="hidden-sm hidden-md"><%= t("nav.imprint") %></span>
             </a>
           </li>
+          <li>
+            <a href="<%= privacy %>" class="privacy" title="<%= t("nav.privacy") %>" target="_blank">
+              <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+              <span class="hidden-sm hidden-md"><%= t("nav.privacy") %></span>
+            </a>
+          </li>
         <% end -%>
       </ul>
     </div>
