--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -99,7 +99,7 @@ $ ->
 
   $(document).on 'click', '.show-feature', () ->
     KS.reloadFeatures()
-  $(document).on 'change', '.map-parameter', () ->
+  $(document).on 'change', '.map-parameter-reload', () ->
     KS.reloadFeatures()
 
   $(document).on 'click', '.header-tab', () ->
