--- a/app/assets/javascripts/statistics.coffee.erb
+++ b/app/assets/javascripts/statistics.coffee.erb
@@ -186,3 +186,6 @@ $ ->
         format = new ol.format.WKT()
         grenze = format.readFeature(elem.grenze)
         KS.olHeatmap.getView().fit grenze.getGeometry().getExtent()
+    else
+      KS.olHeatmap.getView().setZoom(4)
+      KS.olHeatmap.getView().setCenter(<%= Settings::Map.center %>)
