--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,1 +1,5 @@
 <%= render partial: @mobile ? 'mobile' : 'desktop' %>
+
+<% if login_required? -%>
+  <%= content_tag(:div, nil, id: 'job-sound-path', 'data-file': audio_path('job.mp3')) %>
+<% end -%>
