--- a/app/views/requests/mobile/_show.html.erb
+++ b/app/views/requests/mobile/_show.html.erb
@@ -89,9 +89,9 @@
                 </div>
               </div>
               <div class="form-group">
-                <%= f.label(:email, Request.human_attribute_name(:email), class: 'col-md-2 control-label') %>
+                <%= f.label(:author, Request.human_attribute_name(:author), class: 'col-md-2 control-label') %>
                 <div class="col-md-10">
-                  <%= f.email_field(:email, class: 'form-control') %>
+                  <%= f.email_field(:author, class: 'form-control') %>
                 </div>
               </div>
               <div class="row">
