--- a/app/views/requests/desktop/_show.html.erb
+++ b/app/views/requests/desktop/_show.html.erb
@@ -101,7 +101,7 @@
       </div>
       <div class="row form-group">
         <div class="col-md-12">
-          <%= f.email_field(:email, class: 'form-control', placeholder: t('placeholder.email')) %>
+          <%= f.email_field(:author, class: 'form-control', placeholder: t('placeholder.email')) %>
         </div>
       </div>
       <div class="row form-group">
