--- a/app/views/requests/mobile/_show.html.erb
+++ b/app/views/requests/mobile/_show.html.erb
@@ -164,6 +164,11 @@
                       options.merge(class: 'btn btn-default')) if display?(:create_comment) %>
           <%= link_to(t('.actions.kod'), [:new, @request, :protocol, mobile: @mobile],
                       options.merge(class: 'btn btn-default')) if display?(:protocol) %>
+
+          <% if display?(:d3_document_url) && @request.service.document_url.present? -%>
+            <%= link_to(t('.actions.d3_document'), d3_document_url(@request),
+                        options.merge(class: 'btn btn-default', target: '_blank', :remote => false)) %>
+          <% end -%>
         </div>
       </div>
     </div>
